openmediavault (1.0.25) stable; urgency=low

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 02 Oct 2014 10:23:00 +0200

openmediavault (1.0.24) stable; urgency=low

  * Update locales.
  * Allow plugin developers to create hidden mntent database entries. Those
    entries won't be written to /etc/fstab.
  * Fix update-initramfs issue on various platforms that do not use that.
  * Mantis 0001129: WebGUI shows incorrect MDADM information during recovery.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 23 Sep 2014 09:32:49 +0200

openmediavault (1.0.23) stable; urgency=low

  * Mantis 0001112: Failed to setup multiple bonding interfaces.
  * Mantis 0001114: Entry of username/password for email-notification
    not possible.
  * Mantis 0001115: Samba password does not change.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 22 Sep 2014 12:05:19 +0200

openmediavault (1.0.22) stable; urgency=low

  * Update locales.
  * Cleanup proftpd config script.
  * Mantis 0001101: Linux Softraid - Raid 1 does not survive reboot.
  * Display the extended description for updates and plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 Sep 2014 12:04:17 +0200

openmediavault (1.0.21) stable; urgency=low

  * Fix typo.
  * Various UI improvements.
  * Hide the welcome.msg for FTP users.
  * Use SHA256 as message digest algorithm when creating self signed
    certificates via WebGUI.
  * Add korean language support.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 11 Sep 2014 12:09:30 +0200

openmediavault (1.0.20) stable; urgency=low

  * Modify notification message if a user is banned after too many failed
    login attempts.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 09 Sep 2014 21:41:03 +0200

openmediavault (1.0.19) stable; urgency=low

  * Improve code.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 08 Sep 2014 10:28:49 +0200

openmediavault (1.0.18) stable; urgency=low
