@@ -1,5 +1,7 @@
 openmediavault (1.0.25) stable; urgency=low
 
+  * Improve filesystem backend.
+
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 02 Oct 2014 10:23:00 +0200
 
 openmediavault (1.0.24) stable; urgency=low
